# concat

./: .env  .gitignore  .pre-commit-config.yaml  PROJECT_CONTEXT.md  README.md  docker-compose.override.yml
.copier/: .copier-answers.yml
.devcontainer/: README.md  aliases.sh  auto-start.sh  cleanup.sh  devcontainer.json  docker-compose.dev.yml  docker-compose.services.yml  setup.sh  start-dev-services.sh  start-services.sh
backend/: Dockerfile  Dockerfile.requirements  README.md  pyproject.toml  requirements.txt  run_migration.py  test_api_ready.py  test_cors.py
backend/app/: main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 05c60bdf9d75_add_pdf_document_and_extracted_data_.py  0fe14e75d90c_add_product_catalog_system.py  155751ad82b0_add_pdf_document_and_extracted_data_.py  30b0abbbce5c_create_product_tables.py  5de78f925a37_add_tax_breakdown_to_extracted_data.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: items.py  login.py  pdf_processing.py  private.py  products.py  users.py  utils.py
backend/app/api/routes/: __init__.py  items.py  login.py  users.py
backend/app/core/: config.py  db.py
backend/app/crud/: __init__.py  base.py  crud_extracted_data.py  crud_item.py  crud_pdf_document.py  crud_product.py  crud_user.py
backend/app/models/: __init__.py  extracted_data.py  item.py  pdf_document.py  product.py  user.py
backend/app/schemas/: __init__.py  common.py  item.py  pdf_document.py  token.py  user.py
backend/app/services/: file_storage.py  pdf_processor.py  product_integration.py  product_matcher.py
backend/app/tests/: conftest.py
backend/app/tests/api/routes/: test_login.py  test_users.py
backend/app/tests/crud/: test_user.py
backend/app/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/app/tests/utils/: item.py  user.py
frontend/: .gitignore  .prettierignore  Dockerfile  LANDING_PAGE_FOOTER.md  TANSTACK_TABLE_MIGRATION.md  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  routeTree.gen.ts  utils.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/core/: request.ts
frontend/src/components/: LoginForm.tsx  RecoverPasswordForm.tsx  login-form.tsx
frontend/src/components/Admin/: AddUser.tsx  DeleteUser.tsx  EditUser.tsx
frontend/src/components/Analytics/: AnalyticsDashboardDemo.tsx  AnalyticsToolTip.tsx  ChartCard.tsx  DashboardHeader.tsx  RevenueChart.tsx  StatsCard.tsx  UserGrowthChart.tsx
frontend/src/components/Common/: CompactFooter.tsx  Footer.tsx  ItemActionsMenu.tsx  Navbar.tsx  NotFound.tsx  Sidebar.tsx  SidebarItems.tsx  UserActionsMenu.tsx  UserInfoSection.tsx  UserMenu.tsx  index.ts
frontend/src/components/Items/: AddItem.tsx  DeleteItem.tsx  EditItem.tsx  GroupedProductsTable.tsx  ItemActionsMenu.tsx  ItemsHeader.tsx  ItemsManagement.tsx  ItemsTable.tsx  ItemsTableContainer.tsx  columns.tsx
frontend/src/components/PdfUpload/: ExtractedDataView.tsx  PdfUpload.tsx  PdfUploadSimple.tsx  UploadingFileItem.tsx
frontend/src/components/Pending/: PendingItems.tsx  PendingUsers.tsx
frontend/src/hooks/: useAuth.ts  useCustomToast.ts  useModal.ts  usePdfQueries.ts  useProductQueries.ts
frontend/src/lib/: validation-utils.ts  validations.ts
frontend/src/pages/: Home.tsx
frontend/src/routes/: __root.tsx  _layout.tsx  index.tsx  login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
frontend/src/utils/: formatters.ts
frontend/tests/: auth.setup.ts  config.ts  login.spec.ts  reset-password.spec.ts  sign-up.spec.ts  user-settings.spec.ts
frontend/tests/utils/: mailcatcher.ts  privateApi.ts  random.ts  user.ts
(+60 files in other folders)
