[project]
name = "app"
version = "0.1.0"
description = "Concat Backend API"
requires-python = ">=3.14"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi[standard]==0.115.0",
    "python-multipart==0.0.20",
    "uvicorn==0.30.6",
    "sqlmodel==0.0.27",
    "alembic==1.17.0",
    "psycopg[binary]==3.2.10",
    "pydantic==2.12.2",
    "pydantic-settings==2.11.0",
    "email-validator==2.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "pyjwt==2.10.1",
    "tenacity==8.5.0",
    "emails==0.6",
    "jinja2==3.1.6",
    "httpx==0.28.1",
    "sentry-sdk[fastapi]==1.45.1",
    "PyPDF2==3.0.1",
]
authors = [
    {name = "Concat Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3,<8.0.0",
    "mypy>=1.8.0,<2.0.0",
    "ruff>=0.2.2,<1.0.0",
    "pre-commit>=3.6.2,<4.0.0",
    "types-passlib>=1.7.7.20240106,<2.0.0.0",
    "coverage>=7.4.3,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
